feat: add homepage and characters from first class mage exam arc second stage

--- a/public/api-docs.html
+++ b/public/api-docs.html
@@ -69,6 +69,7 @@
     <div class="container">
         <div class="nav-links">
             <a href="/">← Back to Chat</a>
+            <a href="https://github.com/TheOreoTM/frieren-rag">Github</a>
         </div>
 
         <h1>API Documentation</h1>
@@ -133,6 +134,7 @@
 
         <div class="nav-links" style="margin-top: 40px;">
             <a href="/">← Back to Chat</a>
+            <a href="https://github.com/TheOreoTM/frieren-rag">Github</a>
         </div>
     </div>
 </body>
