--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,7 @@
     <div class="container">
         <div class="nav-links">
             <a href="/api-docs.html">API Documentation</a>
+            <a href="https://github.com/TheOreoTM/frieren-rag">Github</a>
         </div>
 
         <h1>Frieren RAG Chat</h1>
