--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
             </select>
 
             <label for="guessToggle" style="margin-left: 20px;">Educated Guess:</label>
-            <input type="checkbox" value="true" id="guessToggle"> On
+            <input type="checkbox" checked id="guessToggle"> On
         </div>
 
         <div class="input-area">
